[GIP-800] minor improvements